# projectdropit

./: .gitignore  LICENSE  README.md  pyproject.toml
projectdropit/: __init__.py  branding.py  cli.py  config.py  crypto.py  discovery.py  transfer.py  updater.py
tests/: conftest.py  test_loopback.py  test_sanitize.py  test_small_json_regression.py  test_updater.py
